Move links to {{site.url}}, Localize CSS/JS resources

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,11 +9,11 @@
             </footer><!-- #colophon -->
         </div><!-- #page -->
 
-        <script type='text/javascript' src='http://blog.ffledgling.com/wp-content/plugins/akismet/_inc/form.js?ver=3.0.1'></script>
-        <script type='text/javascript' src='http://blog.ffledgling.com/wp-content/themes/ryu/js/navigation.js?ver=20120206'></script>
-        <script type='text/javascript' src='http://blog.ffledgling.com/wp-content/themes/ryu/js/skip-link-focus-fix.js?ver=20130115'></script>
-        <script type='text/javascript' src='http://blog.ffledgling.com/wp-includes/js/comment-reply.min.js?ver=3.9.2'></script>
-        <script type='text/javascript' src='http://blog.ffledgling.com/wp-content/themes/ryu/js/ryu.js?ver=20130319'></script>
+        <script type='text/javascript' src='{{site.url}}/javascript/form.js'></script>
+        <script type='text/javascript' src='{{site.url}}}/javascript/navigation.js'></script>
+        <script type='text/javascript' src='{{site.url}}/javascript/skip-link-focus-fix.js'></script>
+        <script type='text/javascript' src='{{site.url}}/javascript/comment-reply.min.js'></script>
+        <script type='text/javascript' src='{{site.url}}/javascript/ryu.js'></script>
 
     </body>
 </html>
