Fix broken/missing fonts
Fonts missing/not loaded because http content is not loaded when a page
is loaded over https. Fix was to move http links over to https

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,9 @@
             <footer id="colophon" class="site-footer" role="contentinfo">
                 <div class="site-info wrap">
                     <p class="rss-subscribe">Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
-                    Powered by <a href="http://jekyllrb.com" title="A Ruby based static site generator" rel="generator">Jekyll</a>
+                    Powered by <a href="https://jekyllrb.com" title="A Ruby based static site generator" rel="generator">Jekyll</a>
                     <span class="sep"> | </span>
-                    Theme: <a href="http://theme.wordpress.com/themes/ryu/" rel="designer">Ryu</a>.
+                    Theme: <a href="https://theme.wordpress.com/themes/ryu/" rel="designer">Ryu</a>.
                 </div><!-- .site-info -->
             </footer><!-- #colophon -->
         </div><!-- #page -->
