--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,30 +8,30 @@
         {% else %}
         <title>ffledgling&#039;s blog</title>
         {% endif %}
-        <link rel="profile" href="http://gmpg.org/xfn/11" />
+        <link rel="profile" href="https://gmpg.org/xfn/11" />
         <!--[if lt IE 9]>
         <script src="{{site.url}}/javascript/html5.js" type="text/javascript"></script>
         <![endif]-->
 
         <!--
-        <link rel="alternate" type="application/rss+xml" title="ffledgling&#039;s blog &raquo; Feed" href="http://blog.ffledgling.com/feed/" />
-        <link rel="alternate" type="application/rss+xml" title="ffledgling&#039;s blog &raquo; Comments Feed" href="http://blog.ffledgling.com/comments/feed/" />
-        <link rel="alternate" type="application/rss+xml" title="ffledgling&#039;s blog &raquo; Starting out with TaskCluster Comments Feed" href="http://blog.ffledgling.com/starting-out-with-taskcluster/feed/" />
+        <link rel="alternate" type="application/rss+xml" title="ffledgling&#039;s blog &raquo; Feed" href="https://blog.ffledgling.com/feed/" />
+        <link rel="alternate" type="application/rss+xml" title="ffledgling&#039;s blog &raquo; Comments Feed" href="https://blog.ffledgling.com/comments/feed/" />
+        <link rel="alternate" type="application/rss+xml" title="ffledgling&#039;s blog &raquo; Starting out with TaskCluster Comments Feed" href="https://blog.ffledgling.com/starting-out-with-taskcluster/feed/" />
         -->
         <link rel='stylesheet' id='genericons-css'  href='{{site.url}}/css/genericons.css' type='text/css' media='all' />
         <link rel='stylesheet' id='ryu-style-css'  href='{{site.url}}/css/style.css' type='text/css' media='all' />
         <link rel='stylesheet' id='syntax-css'  href='{{site.url}}/css/syntax.css' type='text/css' media='all' />
-        <link rel='stylesheet' id='ryu-lato-css'  href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' type='text/css' media='all' />
-        <link rel='stylesheet' id='ryu-playfair-display-css'  href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic&#038;subset=latin,latin-ext' type='text/css' media='all' />
+        <link rel='stylesheet' id='ryu-lato-css'  href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' type='text/css' media='all' />
+        <link rel='stylesheet' id='ryu-playfair-display-css'  href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic&#038;subset=latin,latin-ext' type='text/css' media='all' />
         <script type='text/javascript' src='{{site.url}}/javascript/jquery.js'></script>
         <script type='text/javascript' src='{{site.url}}/javascript/jquery-migrate.min.js'></script>
         <!--
-        <link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://blog.ffledgling.com/xmlrpc.php?rsd" />
-        <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://blog.ffledgling.com/wp-includes/wlwmanifest.xml" /> 
-        <link rel='prev' title='Text-Objects!' href='http://blog.ffledgling.com/text-objects/' />
+        <link rel="EditURI" type="application/rsd+xml" title="RSD" href="https://blog.ffledgling.com/xmlrpc.php?rsd" />
+        <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="https://blog.ffledgling.com/wp-includes/wlwmanifest.xml" /> 
+        <link rel='prev' title='Text-Objects!' href='https://blog.ffledgling.com/text-objects/' />
         <meta name="generator" content="WordPress 3.9.2" />
-        <link rel='canonical' href='http://blog.ffledgling.com/starting-out-with-taskcluster/' />
-        <link rel='shortlink' href='http://blog.ffledgling.com/?p=701' />
+        <link rel='canonical' href='https://blog.ffledgling.com/starting-out-with-taskcluster/' />
+        <link rel='shortlink' href='https://blog.ffledgling.com/?p=701' />
         -->
         <style type="text/css">.recentcomments a{display:inline !important;padding:0 !important;margin:0 !important;}</style>
         <style type="text/css" id="syntaxhighlighteranchor"></style>
@@ -53,7 +53,7 @@
                 <div class="wrap">
 
                     <a class="site-logo"  href="{{site.url}}" title="ffledgling&#039;s blog" rel="home">
-                        <img src="http://gravatar.com/avatar/fc8f2fe7943cbef79c87fb6099407be0/?s=120&#038;d=mm" width="120" height="120" alt="" class="no-grav header-image" />
+                        <img src="https://gravatar.com/avatar/fc8f2fe7943cbef79c87fb6099407be0/?s=120&#038;d=mm" width="120" height="120" alt="" class="no-grav header-image" />
                     </a>
 
                     <hgroup>
@@ -69,13 +69,13 @@
                     <div class="wrap">
                         <ul id="menu-menu" class="menu">
                             <li id="menu-item-39" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-39">
-                                <a href="http://{{site.url}}">Home</a>
+                                <a href="https://{{site.url}}">Home</a>
                             </li>
                             <li id="menu-item-634" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-634">
-                                <a href="http://ffledgling.com/contact.html">Get in touch</a>
+                                <a href="https://ffledgling.com/contact.html">Get in touch</a>
                             </li>
                             <li id="menu-item-635" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-635">
-                                <a href="http://ffledgling.com">Website</a>
+                                <a href="https://ffledgling.com">Website</a>
                             </li>
                         </ul>
                     </div> 
