Add Disqus comments to the blog.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,8 @@
         <script type='text/javascript' src='{{site.url}}/javascript/skip-link-focus-fix.js'></script>
         <script type='text/javascript' src='{{site.url}}/javascript/comment-reply.min.js'></script>
         <script type='text/javascript' src='{{site.url}}/javascript/ryu.js'></script>
+        <!-- Disqus comment count count -->
+        <script id="dsq-count-scr" src="//ffledgling.disqus.com/count.js" async></script>
 
     </body>
 </html>
