--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,6 +65,7 @@
                             </div>
                         </nav><!-- #nav-below -->
 
+                        {% include disqus.html %}
                     </div><!-- #content -->
                 </div><!-- #primary -->
 
