--- a/_includes/header.html
+++ b/_includes/header.html
@@ -69,7 +69,7 @@
                     <div class="wrap">
                         <ul id="menu-menu" class="menu">
                             <li id="menu-item-39" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-39">
-                                <a href="https://{{site.url}}">Home</a>
+                                <a href="{{site.url}}">Home</a>
                             </li>
                             <li id="menu-item-634" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-634">
                                 <a href="https://ffledgling.com/contact.html">Get in touch</a>
