--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,7 @@
         <link rel="alternate" type="application/rss+xml" title="ffledgling&#039;s blog &raquo; Comments Feed" href="https://blog.ffledgling.com/comments/feed/" />
         <link rel="alternate" type="application/rss+xml" title="ffledgling&#039;s blog &raquo; Starting out with TaskCluster Comments Feed" href="https://blog.ffledgling.com/starting-out-with-taskcluster/feed/" />
         -->
+        <link rel="shortcut icon" type="image/png" href="/favicon.png">
         <link rel='stylesheet' id='genericons-css'  href='{{site.url}}/css/genericons.css' type='text/css' media='all' />
         <link rel='stylesheet' id='ryu-style-css'  href='{{site.url}}/css/style.css' type='text/css' media='all' />
         <link rel='stylesheet' id='syntax-css'  href='{{site.url}}/css/syntax.css' type='text/css' media='all' />
