--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
                                     {% if page.categories %}
                                     <span class="categories-links">
                                         {% for category in page.categories %}
-                                        <a href="http://localhost:4000/category/{{category}}/" title="View all posts in {{category}}" rel="category tag">{{category}}</a>,
+                                        <a href="{{site.url}}/category/{{category}}/" title="View all posts in {{category}}" rel="category tag">{{category}}</a>,
                                         {% endfor %}
                                     </span>
                                     {% endif %}
@@ -31,7 +31,7 @@
                                     {% if page.tags %}
                                     <span class="tags-links">
                                         {% for tag in page.tags %}
-                                        <a href="http://localhost:4000/tag/{{tag}}/" rel="tag">{{tag}}</a>,
+                                        <a href="{{site.url}}/tag/{{tag}}/" rel="tag">{{tag}}</a>,
                                         {% endfor %}
                                     </span>
                                     {% endif %}
